name:                 Drawhub
version:              0.1.0.0
synopsis:             Haskell application to draw 8-bit images on Github contribution table
-- description:
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/TurpIF/Drawhub
author:               Pierre Turpin
maintainer:           pierre.turpin54@gmail.com
bug-reports:          https://github.com/TurpIF/Drawhub/issues
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Drawhub
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
  Ghc-options:       -Wall
  if impl(ghc >= 6.8)
    Ghc-options: -fwarn-tabs


source-repository head
  type:     git
  location: https://github.com/TurpIF/Drawhub.git
