name:                 Drawhub
version:              0.1.0.0
synopsis:             Haskell application to draw 8-bit images on Github contribution table
-- description:
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/TurpIF/Drawhub
author:               Pierre Turpin
maintainer:           pierre(dot)turpin54(at)gmail(dot)com
bug-reports:          https://github.com/TurpIF/Drawhub/issues
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Drawhub
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        JuicyPixels == 3.2.8
  hs-source-dirs:       src/main
  default-language:     Haskell2010
  Ghc-options:          -fwarn-missing-signatures
  if impl(ghc >= 6.8)
    Ghc-options: -fwarn-tabs

Test-Suite test
    type:                 exitcode-stdio-1.0
    main-is:              Test.hs
    build-depends:        base >= 4.7 && < 5,
                          QuickCheck
    hs-source-dirs:       src/main, src/test
    default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/TurpIF/Drawhub.git
