name:                 Drawhub
version:              0.1.0.0
synopsis:             Haskell application to draw 8-bit images on Github contribution table
-- description:
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/TurpIF/Drawhub
author:               Pierre Turpin
maintainer:           pierre(dot)turpin54(at)gmail(dot)com
bug-reports:          https://github.com/TurpIF/Drawhub/issues
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Drawhub
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        JuicyPixels == 3.2.8,
                        vector == 0.12.0.0,
                        containers >= 0.5.7.1 && <= 0.5.10.1,

                        -- waiting 3.1.2 https://github.com/jwiegley/gitlib/issues/50 fix windows compatibility.
                        -- For the moment, you had to do "cabal sandbox add-source /path/to/gitlib" manually.
                        -- Current commit used is e6330fb3aef312ca8958c9d0b0890505c1d89549
                        gitlib
  hs-source-dirs:       src/main
  default-language:     Haskell2010
  Ghc-options:          -fwarn-missing-signatures
    -O3
    ---rtsopts
    --fprof-auto
    --prof
    --"-with-rtsopts=-p -h -s -i0.1"
  if impl(ghc >= 6.8)
    Ghc-options: -fwarn-tabs

Test-Suite test
    type:                 exitcode-stdio-1.0
    main-is:              Test.hs
    build-depends:        base >= 4.7 && < 5,
                          QuickCheck
    hs-source-dirs:       src/main, src/test
    default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/TurpIF/Drawhub.git
